# taxas_tesouro_direto

./: .env_template  README.md  pyproject.toml
src/: etl_data_specialization.ipynb  etl_raw_data_compilation.ipynb  ingest_data.py
