[tool.poetry]
name = "taxas-tesouro-direto"
version = "0.1.0"
description = ""
authors = ["Lucas Fernandes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.159"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
